<resources>
    <string name="app_name">Taschenrechner</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="buttonComma">,</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonMultiply">×</string>
    <string name="buttonDivide">÷</string>
    <string name="buttonEquals">=</string>
    <string name="buttonBack">⇐</string>
    <string name="buttonAC">AC</string>
    <string name="buttonBracketO">(</string>
    <string name="buttonBracketC">)</string>
    <string name="buttonSqrt">√</string>
    <string name="buttonSin">sin</string>
    <string name="buttonCos">cos</string>
    <string name="buttonTan">tan</string>
    <string name="buttonArcsin">asin</string>
    <string name="buttonArccos">acos</string>
    <string name="buttonArctan">atan</string>
    <string name="buttonLog">log</string>
    <string name="buttonLn">ln</string>
    <string name="buttonE">e</string>
    <string name="buttonPow">x^y</string>
    <string name="buttonPi">π</string>
    <string name="buttonFunctionDraw">Graphen zeichnen</string>
</resources>