<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#B8B1B1">

    <Button
        android:id="@+id/buttonAC"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#FF9800"
        android:text="@string/buttonAC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#009688"
        android:text="@string/button0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonComma"
        app:layout_constraintStart_toEndOf="@+id/buttonAC" />

    <Button
        android:id="@+id/buttonComma"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="20dp"
        android:text="@string/buttonComma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEquals"
        app:layout_constraintStart_toEndOf="@+id/button0" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#FF9800"
        android:text="@string/buttonEquals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonComma" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#009688"
        android:text="@string/button1"
        app:layout_constraintBottom_toTopOf="@+id/buttonAC"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#009688"
        android:text="@string/button2"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#009688"
        android:text="@string/button3"
        app:layout_constraintBottom_toTopOf="@+id/buttonComma"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="1dp"
        android:text="@string/buttonPlus"
        app:layout_constraintBottom_toTopOf="@+id/buttonEquals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#009688"
        android:text="@string/button4"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#009688"
        android:text="@string/button7"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#009688"
        android:text="@string/button5"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#009688"
        android:text="@string/button8"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#009688"
        android:text="@string/button6"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
        app:layout_constraintStart_toEndOf="@+id/button5" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#009688"
        android:text="@string/button9"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultiply"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="1dp"
        android:text="@string/buttonMinus"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="1dp"
        android:text="@string/buttonMultiply"
        app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="1dp"
        android:text="@string/buttonDivide"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonBack" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#FF9800"
        android:text="@string/buttonBack"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintStart_toEndOf="@+id/buttonBracketC" />

    <Button
        android:id="@+id/buttonBracketC"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/buttonBracketC"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/buttonBack"
        app:layout_constraintStart_toEndOf="@+id/buttonBracketO" />

    <Button
        android:id="@+id/buttonBracketO"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/buttonBracketO"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/buttonBracketC"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/calcView"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border"
        android:textAlignment="viewEnd"
        android:textColor="#020202"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDrawFunction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSin"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/buttonSin"
        app:layout_constraintBottom_toTopOf="@+id/buttonBracketO"
        app:layout_constraintEnd_toStartOf="@+id/buttonCos"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCos"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/buttonCos"
        app:layout_constraintBottom_toTopOf="@+id/buttonBracketC"
        app:layout_constraintEnd_toStartOf="@+id/buttonTan"
        app:layout_constraintStart_toEndOf="@+id/buttonSin" />

    <Button
        android:id="@+id/buttonPi"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="1dp"
        android:text="@string/buttonPi"
        app:layout_constraintBottom_toTopOf="@+id/buttonDivide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonBack" />

    <Button
        android:id="@+id/buttonLog"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/buttonLog"
        app:layout_constraintBottom_toTopOf="@+id/buttonSin"
        app:layout_constraintEnd_toStartOf="@+id/buttonLn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonLn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/buttonLn"
        app:layout_constraintBottom_toTopOf="@+id/buttonSin"
        app:layout_constraintEnd_toStartOf="@+id/buttonSqrt"
        app:layout_constraintStart_toEndOf="@+id/buttonLog" />

    <Button
        android:id="@+id/buttonTan"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/buttonTan"
        app:layout_constraintBottom_toTopOf="@+id/buttonBack"
        app:layout_constraintEnd_toStartOf="@+id/buttonPi"
        app:layout_constraintStart_toEndOf="@+id/buttonCos" />

    <Button
        android:id="@+id/buttonSqrt"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/buttonSqrt"
        app:layout_constraintBottom_toTopOf="@+id/buttonCos"
        app:layout_constraintEnd_toStartOf="@+id/buttonPow"
        app:layout_constraintStart_toEndOf="@+id/buttonLn" />

    <Button
        android:id="@+id/buttonPow"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="1dp"
        android:text="@string/buttonPow"
        app:layout_constraintBottom_toTopOf="@+id/buttonPi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSqrt" />

    <Button
        android:id="@+id/buttonArcsin"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/buttonArcsin"
        app:layout_constraintBottom_toTopOf="@+id/buttonLog"
        app:layout_constraintEnd_toStartOf="@+id/buttonArccos"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonArccos"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/buttonArccos"
        app:layout_constraintBottom_toTopOf="@+id/buttonLog"
        app:layout_constraintEnd_toStartOf="@+id/buttonArctan"
        app:layout_constraintStart_toEndOf="@+id/buttonArcsin" />

    <Button
        android:id="@+id/buttonArctan"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="@string/buttonArctan"
        app:layout_constraintBottom_toTopOf="@+id/buttonLn"
        app:layout_constraintEnd_toStartOf="@+id/buttonE"
        app:layout_constraintStart_toEndOf="@+id/buttonArccos" />

    <Button
        android:id="@+id/buttonE"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="1dp"
        android:text="@string/buttonE"
        app:layout_constraintBottom_toTopOf="@+id/buttonSqrt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonArctan" />

    <Button
        android:id="@+id/buttonDrawFunction"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="3dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/buttonFunctionDraw"
        app:layout_constraintBottom_toTopOf="@+id/buttonArcsin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>